# Brain_Tumor_Classificatioin

./: .gitignore  Dockerfile  MODEL_CARD.md  New_InceptionV3_Brain_Tumor.ipynb  PORTFOLIO.md  README.md  VGG16_Brain_Tumor.ipynb  pyproject.toml  requirements-macos.txt  requirements.txt
.github/workflows/: ci.yml
legacy/: CNN_Brain_Tumor.ipynb  EfficientNetB3_Brain_Tumor.ipynb
results/metrics/: calibration.json  evaluation.json  external_validation.json  latency.json  leakage.json  robustness.json  train_history.json  uncertainty.json
scripts/: diagnose_bn.py  download_data.sh  fill_readme_results.py  recalibrate_bn.py  reproduce.sh  setup_env.sh
space/: README.md  app.py  requirements.txt
src/btc/: __init__.py  calibration.py  config.py  data.py  evaluate.py  explain.py  export_onnx.py  external_validation.py  leakage.py  model.py  monitoring.py  robustness.py  train.py  uncertainty.py
src/btc/serve/: __init__.py  app.py
tests/: test_core.py
